--- a/turbo.json
+++ b/turbo.json
@@ -1,18 +1,25 @@
 {
-  "$schema": "https://turbo.build/schema.json",
+  "$schema": "https://turborepo.org/schema.json",
   "pipeline": {
     "build": {
+      "dependsOn": ["^build"],
       "outputs": ["dist/**"]
     },
-    "lint": {},
-    "extract-translations": {
-      "outputs": ["./translations/*"]
+    "test": {
+      "dependsOn": ["^test"]
     },
-    "test": {},
+    "test:watch": {
+      "dependsOn": ["^test:watch"]
+    },
     "coverage": {
-      "outputs": ["coverage/**"]
+      "dependsOn": ["^coverage"]
     },
-    "typescript": {},
-    "verify": {}
+    "lint": {
+      "dependsOn": ["^lint"]
+    },
+    "typescript": {
+      "dependsOn": ["^typescript"]
+    },
+    "extract-translations": {}
   }
 }
