--- a/package.json
+++ b/package.json
@@ -15,67 +15,69 @@
     "postinstall": "husky install"
   },
   "dependencies": {
-    "@carbon/react": "^1.33.1",
-    "lodash-es": "^4.17.21"
-  },
-  "peerDependencies": {
-    "@openmrs/esm-framework": "*",
-    "dayjs": "1.x",
-    "react": "18.x",
-    "react-i18next": "11.x",
-    "react-router-dom": "6.x",
-    "rxjs": "6.x"
+    "@hookform/resolvers": "^3.3.1",
+    "classnames": "^2.3.2",
+    "react-hook-form": "^7.46.2",
+    "swr": "^2.0.1",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@carbon/react": "~1.37.0",
     "@openmrs/esm-framework": "next",
-    "@openmrs/esm-styleguide": "next",
-    "@playwright/test": "^1.44.0",
-    "@swc/cli": "^0.3.12",
-    "@swc/core": "^1.3.68",
-    "@swc/jest": "^0.2.36",
-    "@testing-library/dom": "^10.1.0",
-    "@testing-library/jest-dom": "^6.4.5",
-    "@testing-library/react": "^15.0.6",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/jest": "^29.5.12",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "@types/react-router": "^5.1.20",
+    "@openmrs/esm-patient-common-lib": "next",
+    "@playwright/test": "1.44.0",
+    "@swc/core": "^1.2.165",
+    "@swc/jest": "^0.2.29",
+    "@testing-library/dom": "^9.3.3",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^29.5.11",
+    "@types/lodash-es": "^4.17.3",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.5",
     "@types/react-router-dom": "^5.3.3",
-    "@types/webpack-env": "^1.18.1",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.8.0",
+    "@types/uuid": "^8.3.0",
+    "@types/webpack-env": "^1.16.0",
+    "@types/yup": "^0.29.11",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
+    "babel-preset-minify": "^0.5.1",
+    "concurrently": "^5.3.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
+    "dayjs": "^1.8.36",
     "dotenv": "^16.0.3",
-    "eslint": "^8.50.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint": "^8.55.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
-    "i18next": "^23.2.8",
-    "i18next-parser": "^8.0.0",
+    "i18next": "^21.10.0",
+    "i18next-parser": "^6.6.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "lint-staged": "^15.2.2",
+    "lint-staged": "^15.2.1",
     "openmrs": "next",
-    "prettier": "^2.8.8",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "prettier": "^3.1.1",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-i18next": "^11.18.6",
-    "react-router-dom": "^6.14.1",
-    "rxjs": "^6.6.7",
+    "react-router-dom": "^6.3.0",
+    "sass": "^1.29.0",
+    "sass-loader": "^10.1.0",
     "swc-loader": "^0.2.3",
-    "turbo": "^1.13.3",
-    "typescript": "^4.9.5",
-    "webpack": "^5.88.1",
-    "webpack-cli": "^5.1.4"
+    "turbo": "^1.13.2",
+    "typedoc": "^0.22.15",
+    "typescript": "^4.0.3",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.15.1"
   },
   "lint-staged": {
-    "packages/**/src/**/*.{ts,tsx}": "eslint --cache --fix --max-warnings 0",
-    "*.{css,scss,ts,tsx}": "prettier --write --list-different"
+    "*.{ts,tsx}": "eslint --cache --fix --max-warnings 0",
+    "*.{css,scss,ts,tsx}": "prettier --cache --write --list-different"
   },
   "packageManager": "yarn@4.2.2"
 }
